--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 <!-- _________________________________________________ -->
 
 
-<!-- MAIN CONTENT BEGINS-->
+                   <!-- MAIN CONTENT BEGINS-->
 <!-- Scrollable content area, each .tab-content is a "page" -->
-<main class="content-main">
+<section class="content-main">
 
 
 <!-- TAB 1 BEGINS (BLOG, INFO, NEWS, UPDATE AND MORE)-->
@@ -638,7 +638,7 @@
       </section>
 <!-- TAB 20 ENDS --> 
 
-    </main>
+    </section>
 <!-- MAIN CONTENT ENDS-->
 
 
